extras/create-dashboard-service-http.yml
kind: Service
apiVersion: v1
metadata:
 name: kubernetes-dashboard
spec:
 selector:
   app: dashboard
 ports:
 - protocol: TCP
   port: 80
   targetPort: 9090
