extras/create-dashboard-service-https.yaml
kind: Service
apiVersion: v1
metadata:
 name: kubernetes-dashboard
spec:
 selector:
   app: dashboard
 ports:
 - protocol: TCP
   port: 443
   targetPort: 9090
