extras/update-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
      name: allow-all
spec:
      podSelector: {}
      ingress:
      - {}
